test/should_pass/dot_001.grg
actions dot_001;

rule r {
	pattern {
		.;
	}
	replace {
		.;
	}
}




