test/should_fail/empty_001.grg
actions empty_001;

rule empty_1 {
	pattern {
		;
	}
	replace {
		;
	}
}

